force-app/main/default/objects/Goal__c/fields/Goal_Category__c.field-meta.xml
<CustomField>
    <fullName>Goal_Category__c</fullName>
    <description>Category the goal falls into.</description>
    <inlineHelpText>Enter the category the goal falls into.</inlineHelpText>
    <label>Goal Category</label>
    <length>64</length>
    <type>Text</type>
</CustomField>