force-app/main/default/objects/Goal__c/fields/Goal_Descripton__c.field-meta.xml
<CustomField>
    <fullName>Goal_Descripton__c</fullName>
    <inlineHelpText>Enter the description of the goal.</inlineHelpText>
    <label>Goal Descripton</label>
    <length>600</length>
    <type>Html</type>
</CustomField>