force-app/main/default/objects/Goal__c/fields/Goal_Status__c.field-meta.xml
<CustomField>
    <fullName>Goal_Status__c</fullName>
    <formula>CASE(  Status__c  ,
&quot;Green&quot;, IMAGE(&quot;https://c.na59.visual.force.com/resource/1553638766000/GraphicsPackNew/fatcow/farmfresh/32/flag_green.png&quot;, &quot;Green&quot; ,30, 30) ,
&quot;Yellow&quot;, IMAGE(&quot;https://c.na59.visual.force.com/resource/1553638766000/GraphicsPackNew/fatcow/farmfresh/32/flag_yellow.png&quot;, &quot;Yellow&quot; ,30, 30) ,
&quot;Red&quot;, IMAGE(&quot;https://c.na59.visual.force.com/resource/1553638766000/GraphicsPackNew/fatcow/farmfresh/32/flag_red.png&quot;, &quot;Red&quot; ,30, 30) ,
&quot;Not Available&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal Status</label>
    <type>Text</type>
</CustomField>