force-app/main/default/objects/Goal__c/fields/Goal_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Goal_Target_Date__c</fullName>
    <inlineHelpText>Enter the date the Goal needs to be completed by.</inlineHelpText>
    <label>Goal Target Date</label>
    <type>Date</type>
</CustomField>