force-app/main/default/objects/Goal__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <defaultValue>&quot;2020&quot;</defaultValue>
    <inlineHelpText>Enter the year the goal applies to.</inlineHelpText>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>